[gd_scene load_steps=3 format=3 uid="uid://du0a1qv77su4e"]

[ext_resource type="Script" path="res://scenes/UI/PauseMenu.gd" id="1_rjc0l"]
[ext_resource type="Theme" uid="uid://dnn08y6crlm3c" path="res://themes/main_theme.tres" id="2_nlmfe"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rjc0l")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.121569, 0.188235, 0.792157)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nlmfe")
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 2

[node name="MusicSliderLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Music
"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../VBoxContainer/QuitButton")
focus_neighbor_bottom = NodePath("../SoundSlider")
max_value = 1.0
step = 0.05
value = 0.8

[node name="SoundSliderLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Sound"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../../VBoxContainer/ResumeButton")
max_value = 1.0
step = 0.05
value = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../GridContainer/SoundSlider")
focus_neighbor_bottom = NodePath("../RetryButton")
text = "Resume"

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Retry"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../RetryButton")
focus_neighbor_bottom = NodePath("../../GridContainer/MusicSliderLabel")
text = "Quit
"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
